# manoek-a-game

./: .gitignore  CMakeLists.txt  README.md  class.h  manukan.cpp  window.h
src/: class.h  container.h  include.h  template.h  window.h
